# MonkeyBench

./: .env.example  .gitignore  CLAUDE.md  RDP.md  README.md  pyproject.toml  run_arena.py  run_backfill_extra.py  run_demo.py  run_m1.py  run_score.py  run_validation.py  run_web.py  run_web_mock.py
data/cache/: .gitkeep
src/arena/: __init__.py  arena.py  datafeed.py  engine.py  eventlog.py  leaderboard.py  market.py  portfolio.py  strategies.py  strategy.py
src/data/: __init__.py  backfill.py  cache.py  codes.py  feeds.py  ratelimit.py  universe.py
src/insight/: __init__.py  agent.py  report_agent.py  report_spec.py  skills.py  tools.py
src/research/: __init__.py  loaders.py  report.py  scores.py  signal_strategy.py  validation.py
src/web/: __init__.py  app.py  config.py
tests/: test_agent.py  test_loaders.py  test_market_rules.py  test_report.py  test_report_agent.py  test_scores.py  test_signal_strategy.py  test_skills.py  test_validation.py
