[project]
name = "MonkeyBench"
version = "0.1.0"
description = "个人实验性的多账号策略竞技场:研究层产信号 → 唯一引擎执行打分 → 排行榜"
requires-python = ">=3.13"
dependencies = []  # 引擎核心纯标准库,零依赖。其余按需装 optional。

[project.optional-dependencies]
data = ["tushare", "duckdb", "akshare", "baostock"]   # 行情数据源(主源 tushare SDK)+ DuckDB 缓存
web = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "sse-starlette",
    "apscheduler",
    "sqlalchemy",
    "python-multipart>=0.0.32",
]  # FastAPI+HTMX 后端 / 调度 / SQLite 抽象
llm = ["openai"]   # OpenAI 兼容 SDK(DeepSeek V4 / GLM-5.2 / MiniMax-3 可换)
research = ["lightgbm", "scikit-learn", "pyarrow"]   # 自建轻量 ML(Qlib 不支持 py3.13;改移植其 Alpha158 因子表达式作对标)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arena", "src/data", "src/research", "src/insight"]
